# regaltechsuport.com-frontend

./: Cargo.toml  Makefile.toml  README.md
src/: lib.rs
src/pages/: home.rs
static/: index.html  wasm.js  wasm_bg.wasm
