[package]
name = "site_rts"
version = "0.1.0"
authors = ["13r0ck <bnr@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17.0"
wasm-bindgen = "0.2.68"
easy-hasher = "2.2.1"
rand = "0.7.3"
rand_seeder = "0.2.1"
rand_pcg = "0.2.1"
js-sys = "0.3.45"
